--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,8 @@
 blank_issues_enabled: false
 contact_links:
-  - name: Documentation
+  - name: FAQ
     url: https://pizzaparty.menu/faq
     about: Check our FAQ before asking a question
+  - name: Contact us
+    url: https://pizzaparty.menu/contact
+    about: Contact us privately
